<resources>
    <string name="app_name">SampleProject</string>
    <string name="shankar">Shankar</string>
    <string name="shankar_new">Shankar New</string>

    <string name="mobile_number">Mobile Number</string>
    <string name="password">Password</string>
    <string name="login">Login</string>

    <string name="home">Home</string>
    <string name="videos">Videos</string>
    <string name="gallery">Gallery</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
